test/visibility/except/literalExcept.good
literalExcept.chpl:6: error: incorrect expression in 'except' list, identifier expected
